# 2d-phys-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
include/engine/core/: CompilerSettings.h  PhysicsEngine.h
include/engine/math/: EngineVector2.h  functions.h
include/engine/memory/: AlignedAllocator.h
include/engine/objects/: Line.h  MagneticPoint.h  Point.h  PointsSystem.h  SpringsSystem.h
include/engine/physics/: Interactions.h  MagnetPole.h  MaterialType.h
include/engine/rendering/: Colors.h  Renderer.h
src/engine/core/: PhysicsEngine.cpp
src/engine/math/: EngineVector2.cpp
src/engine/objects/: Line.cpp  MagneticPoint.cpp  Point.cpp  PointsSystem.cpp  SpringsSystem.cpp
src/engine/physics/: Interactions.cpp
src/engine/rendering/: Renderer.cpp
